// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberTileView RoomMemberTileView should display an verified E2EIcon when the e2E status = Verified 1`] = `
<div>
  <div>
    <div
      aria-label="@userId:matrix.org (power 0)"
      class="mx_AccessibleButton mx_MemberTileView"
      role="button"
      tabindex="-1"
    >
      <div
        class="mx_MemberTileView_left"
      >
        <div
          class="mx_MemberTileView_avatar"
        >
          <span
            class="_avatar_mcap2_17 mx_BaseAvatar _avatar-imageless_mcap2_61"
            data-color="2"
            data-testid="avatar-img"
            data-type="round"
            role="presentation"
            style="--cpd-avatar-size: 32px;"
            title="@userId:matrix.org"
          >
            u
          </span>
           
        </div>
        <div
          class="mx_MemberTileView_name"
        >
          <div
            class="mx_DisambiguatedProfile"
          >
            <span
              class=""
              dir="auto"
            >
              @userId:matrix.org
            </span>
          </div>
        </div>
      </div>
      <div
        class="mx_MemberTileView_right"
      >
        <div
          aria-labelledby=":ri:"
          class="mx_E2EIconView"
        >
          <svg
            class="mx_E2EIconView_verified"
            fill="currentColor"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.15 21.75 6.7 19.3l-2.75-.6a.943.943 0 0 1-.6-.387.928.928 0 0 1-.175-.688L3.45 14.8l-1.875-2.15a.934.934 0 0 1-.25-.65c0-.25.083-.467.25-.65L3.45 9.2l-.275-2.825a.928.928 0 0 1 .175-.688.943.943 0 0 1 .6-.387l2.75-.6 1.45-2.45a.983.983 0 0 1 .55-.438.97.97 0 0 1 .7.038l2.6 1.1 2.6-1.1a.97.97 0 0 1 .7-.038.983.983 0 0 1 .55.438L17.3 4.7l2.75.6c.25.05.45.18.6.388.15.208.208.437.175.687L20.55 9.2l1.875 2.15c.167.183.25.4.25.65s-.083.467-.25.65L20.55 14.8l.275 2.825a.928.928 0 0 1-.175.688.943.943 0 0 1-.6.387l-2.75.6-1.45 2.45a.983.983 0 0 1-.55.438.97.97 0 0 1-.7-.038l-2.6-1.1-2.6 1.1a.97.97 0 0 1-.7.038.983.983 0 0 1-.55-.438Zm2.8-9.05L9.5 11.275A.933.933 0 0 0 8.813 11c-.275 0-.513.1-.713.3a.948.948 0 0 0-.275.7.95.95 0 0 0 .275.7l2.15 2.15c.2.2.433.3.7.3.267 0 .5-.1.7-.3l4.25-4.25c.2-.2.296-.433.287-.7a1.055 1.055 0 0 0-.287-.7 1.02 1.02 0 0 0-.713-.313.93.93 0 0 0-.712.288L10.95 12.7Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MemberTileView RoomMemberTileView should display an warning E2EIcon when the e2E status = Warning 1`] = `
<div>
  <div>
    <div
      aria-label="@userId:matrix.org (power 0)"
      class="mx_AccessibleButton mx_MemberTileView"
      role="button"
      tabindex="-1"
    >
      <div
        class="mx_MemberTileView_left"
      >
        <div
          class="mx_MemberTileView_avatar"
        >
          <span
            class="_avatar_mcap2_17 mx_BaseAvatar _avatar-imageless_mcap2_61"
            data-color="2"
            data-testid="avatar-img"
            data-type="round"
            role="presentation"
            style="--cpd-avatar-size: 32px;"
            title="@userId:matrix.org"
          >
            u
          </span>
           
        </div>
        <div
          class="mx_MemberTileView_name"
        >
          <div
            class="mx_DisambiguatedProfile"
          >
            <span
              class=""
              dir="auto"
            >
              @userId:matrix.org
            </span>
          </div>
        </div>
      </div>
      <div
        class="mx_MemberTileView_right"
      >
        <div
          aria-labelledby=":r8:"
          class="mx_E2EIconView"
        >
          <svg
            class="mx_E2EIconView_warning"
            fill="currentColor"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17a.97.97 0 0 0 .713-.288A.968.968 0 0 0 13 16a.968.968 0 0 0-.287-.713A.968.968 0 0 0 12 15a.968.968 0 0 0-.713.287A.968.968 0 0 0 11 16c0 .283.096.52.287.712.192.192.43.288.713.288Zm0-4c.283 0 .52-.096.713-.287A.968.968 0 0 0 13 12V8a.967.967 0 0 0-.287-.713A.968.968 0 0 0 12 7a.968.968 0 0 0-.713.287A.967.967 0 0 0 11 8v4c0 .283.096.52.287.713.192.191.43.287.713.287Zm0 9a9.738 9.738 0 0 1-3.9-.788 10.099 10.099 0 0 1-3.175-2.137c-.9-.9-1.612-1.958-2.137-3.175A9.738 9.738 0 0 1 2 12a9.74 9.74 0 0 1 .788-3.9 10.099 10.099 0 0 1 2.137-3.175c.9-.9 1.958-1.612 3.175-2.137A9.738 9.738 0 0 1 12 2a9.74 9.74 0 0 1 3.9.788 10.098 10.098 0 0 1 3.175 2.137c.9.9 1.613 1.958 2.137 3.175A9.738 9.738 0 0 1 22 12a9.738 9.738 0 0 1-.788 3.9 10.098 10.098 0 0 1-2.137 3.175c-.9.9-1.958 1.613-3.175 2.137A9.738 9.738 0 0 1 12 22Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MemberTileView RoomMemberTileView should not display an E2EIcon when the e2E status = normal 1`] = `
<div>
  <div>
    <div
      aria-label="@userId:matrix.org (power 0)"
      class="mx_AccessibleButton mx_MemberTileView"
      role="button"
      tabindex="-1"
    >
      <div
        class="mx_MemberTileView_left"
      >
        <div
          class="mx_MemberTileView_avatar"
        >
          <span
            class="_avatar_mcap2_17 mx_BaseAvatar _avatar-imageless_mcap2_61"
            data-color="2"
            data-testid="avatar-img"
            data-type="round"
            role="presentation"
            style="--cpd-avatar-size: 32px;"
            title="@userId:matrix.org"
          >
            u
          </span>
           
        </div>
        <div
          class="mx_MemberTileView_name"
        >
          <div
            class="mx_DisambiguatedProfile"
          >
            <span
              class=""
              dir="auto"
            >
              @userId:matrix.org
            </span>
          </div>
        </div>
      </div>
      <div
        class="mx_MemberTileView_right"
      />
    </div>
  </div>
</div>
`;

exports[`MemberTileView ThreePidInviteTileView renders ThreePidInvite correctly 1`] = `
<div>
  <div>
    <div
      class="mx_AccessibleButton mx_MemberTileView"
      role="button"
      tabindex="-1"
    >
      <div
        class="mx_MemberTileView_left"
      >
        <div
          class="mx_MemberTileView_avatar"
        >
          <span
            aria-hidden="true"
            class="_avatar_mcap2_17 mx_BaseAvatar _avatar-imageless_mcap2_61"
            data-color="1"
            data-testid="avatar-img"
            data-type="round"
            role="presentation"
            style="--cpd-avatar-size: 32px;"
          >
            F
          </span>
           
        </div>
        <div
          class="mx_MemberTileView_name"
        >
          Foobar
        </div>
      </div>
      <div
        class="mx_MemberTileView_right"
      >
        <div
          class="mx_MemberTileView_userLabel"
        >
          Invited
        </div>
        <div
          class="mx_Flex mx_InvitedIconView"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0;"
        >
          <svg
            fill="currentColor"
            height="16px"
            viewBox="0 0 24 24"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Zm0 5.111a1 1 0 0 0 .514.874l7 3.89a1 1 0 0 0 .972 0l7-3.89a1 1 0 1 0-.972-1.748L12 11.856 5.486 8.237A1 1 0 0 0 4 9.111Z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
